Honour QITS_EDGE_ACME_ADDITIONAL_NAMES: the names no wildcard reaches
The edge derives its certificate's names: the apex, *.<domain> and
*.<env>.<domain> per environment, which is every depth its Host reading
has. A wildcard is leftmost-only and covers exactly ONE label, so
*.<domain> answers for editor.<domain> and for nothing under it, and
*.<env>.<domain> only holds where that middle label is an environment.
The web editor is served at editor.<project>.<domain> - depth three
under a label that is a PROJECT - so no wildcard this platform can order
will ever reach it. Each such host has to be a SAN of its own.

The bootstrap has been rendering QITS_EDGE_ACME_ADDITIONAL_NAMES onto
the seed stack and the deploy extras since qits-bootstrap-cli 911c583;
until now the edge did not read it and the key was inert - a certificate
that came back without the editor hosts on it and a green build either
way. AcmeConfig.additionalNames() reads it (qits.edge.acme.additional-
names, the same kebab-to-env mapping as hetzner-token-file), and
CertificateNames unions it into the desired set.

The semantics are the bootstrap's, spelled the same on both sides: a
name is written whole or relative to the domain, `editor.acme` being
`editor.acme.<domain>`; blanks, case, trailing dots and either separator
are normalised away; a name the derived set already holds is not carried
twice; and a resolved name that is not a DNS name under the domain is
refused rather than sent - one bad name fails the whole order, taking
the names that would have worked with it. Unset or empty orders exactly
the set it ordered before, name for name.

The order of that set is now the order it was built in, here and through
CertificateRequest, which copied through Set.copyOf: the CA reads the
first identifier as the certificate's subject, and Set.copyOf iterates
under a per-JVM salt, so the identical name set named a different
subject after every restart.

AcmeConfigTest is the proof of the env spelling itself - the