@@ -3,6 +3,8 @@ package eu.wohlben.qits.edge.acme;
 import java.net.URI;
 import java.nio.file.Path;
 import java.time.Duration;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 
 public record CertificateRequest(
@@ -13,6 +15,9 @@ public record CertificateRequest(
     Duration challengeTimeout) {
 
   public CertificateRequest {
-    identifiers = Set.copyOf(identifiers);
+    // Copied through a LinkedHashSet rather than Set.copyOf: the CA reads the first identifier as
+    // the certificate's subject, and Set.copyOf iterates in an order salted per JVM — so the
+    // identical name set would name a different subject after every restart.
+    identifiers = Collections.unmodifiableSet(new LinkedHashSet<>(identifiers));
   }
 }
